--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide">
 Progress: 
-🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 3/25 days
+🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 4/25 days
 </div>
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
@@ -229,7 +229,7 @@ Progress:
   <li> <a href="#day2">Day 2: Define MVP</a> </li>
   <li> <a href="#01.12.2021">Day 1: Setup</a> </li>
   <li>
-    <a href="#01.12.2021">Day 0: Launch AdventOfSaas 2021</a>
+    <a href="day0">Day 0: Launch AdventOfSaas 2021</a>
     <ul>
         <a href="#aof2021"> <li>AdventOfSaaS 2021</li> </a>
         <a href="#what-is-advent"> <li>What is AdventOfSaaS?</li> </a>
@@ -241,6 +241,17 @@ Progress:
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day3">Day 4: Simple correction</div>
+<p>I managed to complete the simplest MVP:</p>
+<ul>
+<li>A video player to listen, to pause and play</li>
+<li>The input to type what I hear</li>
+<li>One done, the correction</li>
+</ul>
+<p>Today I focused on implementing the text diff. Initially I spent the time to come up with a simple algorithm, but
+wasted too much time. I ended up using a diff-library (well I didn&rsquo;t think about &ldquo;diffing&rdquo;, I was trying to find miss-matched words, which in the end is &ldquo;diffing&rdquo; duh!)</p>
+<p>This is the result:</p>
+<img src="/images/day4.png" alt="Initial diff" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day3">Day 3: Add video player</div>
 <p>Today&rsquo;s goal was to experiment with the video player. It was fairly easy to add the player,
 most of the time I spent to make the page more prettier.</p>
@@ -295,7 +306,7 @@ Once that was done, everything went as expected.</p>
 was not clear to me as well. So I spent most of the time writing down what I expect, and what problem it should solve.</p>
 <p>Go checkout what I produced today:</p>
 <h3 class="text-xl font-bold"><a href="http://flashdictation.com">flashdictation.com</a></h3>
-<div class="bg-orange-200 p-1 font-semibold mt-8" id="01.12.2021">
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day0">
 Day 0: Launch AdventOfSaas 2021
 </div>
 <h3 class="font-bold text-xl pt-5" id="aof2021">AdventOfSaaS 2021</h3>
