--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@ Progress:
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day4">Day 4: Simple correction</div>
 <p>I managed to complete the simplest MVP:</p>
 <ul>
-<li>A video player to listen, to pause and play</li>
+<li>A video player to listen, pause and play</li>
 <li>The input to type what I hear</li>
 <li>One done, the correction</li>
 </ul>
-<p>Today I focused on implementing the correction part. Initially I spent some time to come up with a simple algorithm, but
+<p>Today I focused on implementing the correction part. Initially, I spent some time coming up with a simple algorithm but
 wasted too much time. I ended up using a diff-library
 (well I didn&rsquo;t think &ldquo;correction&rdquo; in terms of &ldquo;diffing&rdquo;, I was trying to find miss-matched words, which in the end is &ldquo;diffing&rdquo; duh!)</p>
 <p>This is the result:
@@ -257,20 +257,20 @@ wasted too much time. I ended up using a diff-library
 <p>There are a few stuff changes I will make:</p>
 <ul>
 <li>The corrections are not perfect, the punctuations should be ignored (or I can add an option)</li>
-<li>The correction results is not intuitive to read (for non-programmers anyway), I will work on that in the future</li>
-<li>Don&rsquo;t show untyped text (e.g. in the above screenshto everythign after &ldquo;Et d&rsquo;ailleurs&rdquo; should be hidden)</li>
-<li>In the above screenshot you see, I had Grammerly activated. I will disable it in the future.</li>
+<li>The correction results are not intuitive to read (for non-programmers anyway), I will work on that in the future</li>
+<li>Don&rsquo;t show the untyped text (e.g. in the above screenshot everything after &ldquo;Et d&rsquo;ailleurs&rdquo; should be hidden)</li>
+<li>In the above screenshot you see, I had Grammarly activated. I will disable it in the future.</li>
 </ul>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day3">Day 3: Add video player</div>
 <p>Today&rsquo;s goal was to experiment with the video player. It was fairly easy to add the player,
-most of the time I spent to make the page more prettier.</p>
-<p>This is the final result:
+most of the time I spent making the page prettier.</p>
+<p>The final result is:
 <img src="/images/day3.png" alt="Screenshot Day 3" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg"></p>
 <p>Tomorrow, I am going to add the correction logic. That should be enough to test the MVP.
-The next is to add few shortcuts to control the player.</p>
+The next is to add a few shortcuts to control the player.</p>
 <p>With the above mockup, I can easily explain this project to anyone.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day2">Day 2: Define MVP</div>
-<p>The main goal of today is to define the MVP, e.g. more in details and the tiny steps needed to go there.</p>
+<p>The main goal of today is to define the MVP, e.g. more in detail and the tiny steps needed to go there.</p>
 <p>The detailed tasks help me to stay focused, and not get distracted by other (nice to have) features.</p>
 <p>For the audio, I need a way to show a player on my page. I will try with this component: <a href="https://www.npmjs.com/package/react-player">react-component</a>.
 It seems easy to use and allows audio and video - so I don&rsquo;t have to implement it by myself.</p>
@@ -287,16 +287,16 @@ flashdictation.com</a> and to this site, so I published this project to IndieHac
  ■ Get domain flashdictation.com
  ■ Add progress bar in days on the main page
  ■ Setup project on GitHub
- ■ Setup initial landing page with simple description
+ ■ Setup initial landing page with a simple description
  ■ Make a simple logo 
  □ Define MVP
  □ Define timeline
  ■ Publish on Twitter
 </pre>
 <p>How did the day go?</p>
-<p>Registered domain via CloudFlare. The webpage is a simple Next.js static page (for now) which is deployed
-via CloudFlare Pages. This was the fastest way for me to get started.</p>
-<p>CloudFlare Pages deployment did not go smoothly. I ended up having the following error:</p>
+<p>Registered domain via Cloudflare. The webpage is a simple Next.js static page (for now) that is deployed
+via Cloudflare Pages. This was the fastest way for me to get started.</p>
+<p>Cloudflare Pages deployment did not go smoothly. I ended up having the following error:</p>
 <pre tabindex="0"><code>19:21:05.595	export PATH=&quot;$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH&quot;
 19:21:05.595	[0m
 19:21:05.938	[32m&gt; Successfully installed Yarn 1.22.4! Please open another terminal where the `yarn` command will now be available.[0m
@@ -309,7 +309,7 @@ via CloudFlare Pages. This was the fastest way for me to get started.</p>
 19:21:19.178	info Visit https://yarnpkg.com/en/docs/cli/install for documentation about this command.
 19:21:19.199	Error during Yarn install
 19:21:19.202	Failed: build command exited with code: 1
-</code></pre><p>It turned out, without any config CloudFlare uses node version 12.18.0. To fix this I had to set the following environment variable: NODE_VERSION.
+</code></pre><p>It turned out, without any config, CloudFlare uses node version 12.18.0. To fix this I had to set the following environment variable: NODE_VERSION.
 Once that was done, everything went as expected.</p>
 <p>For the logo, I used <a href="https://hatchful.shopify.com/">Hatchful by Shopify</a>. I did not define the MVP yet, since the idea
 was not clear to me as well. So I spent most of the time writing down what I expect, and what problem it should solve.</p>
@@ -330,14 +330,14 @@ work. From 1.12.2021 to 25.12.2021, I pledge to dedicate at least 1h per day (wi
 <p>This launch post was written before December, as well as the project ideas were collected. No code has been written
 until now.</p>
 <h3 class="font-bold text-xl pt-5" id="work">What am I going to work on?</h3>
-<p>Dictatly: I am trying to improve my French. One effective tool are dictations. I would like to watch a video or listen to
-a podcast and write down what I hear. Right now, I do this by hand and then go over the text to correct.
+<p>Dictatly: I am trying to improve my French. One effective tool is dictation. I would like to watch a video or listen to
+a podcast and write down what I hear. Right now, I do this by hand and then go over the text to correct it.
 It would be simpler to use the existing transcript to autocorrect and show the mistakes, as well as track my mistakes.</p>
 <p>Few notes on the idea:</p>
 <ul>
 <li>I did not find a tool that satisfies my need</li>
 <li>My usage is to learn languages, but it can be extended to a general dictation tool</li>
-<li>Not free after beta phase</li>
+<li>Not free after the beta phase</li>
 </ul>
 <p>The first step is to create a landing page, which will contain more information.</p>
 <h3 class="font-bold text-xl pt-5" id="success">What is a successful SaaS for me?</h3>
