--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@ shortcut for the video-player (Key 1) for starting and stopping. That makes it e
 cursor and hit the Play/Pause button.</p>
 <p>This completes (imho) all the features needed to use the tool. Until now I hardcoded the transcript and the video.
 Optimally, I would like the user to enter a YouTube link and type what I hear. Getting the captions from via YouTube API seems possible.</p>
-<p>I spent most of today to figure out how easy it is to integrate the API. It seems doable, but I wanted to avoid adding an external dependency.</p>
-<p>There are few alternatives:</p>
+<p>I spent most of today figuring out how easy it is to integrate the API. It seems doable, but I wanted to avoid adding an external dependency.</p>
+<p>There are a few alternatives:</p>
 <p><strong>Limited set of audio+transcripts</strong>
 The alternative to YouTube links is, that I collect audio+transcripts (free to use) and allow only pre-selected ones.</p>
 <p><strong>Podcast transcripts</strong>
