--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@ While researching, I learned about the <code>podcast:transcript</code> tag for R
 <p>&lt;podcast:transcript url=&ldquo;<a href="https://host.com/1.srt%22">https://host.com/1.srt&quot;</a> type=&ldquo;application/srt&rdquo; /&gt;</p>
 </blockquote>
 <p>This seems a great way to get the transcripts of the audio.</p>
+<p>I don&rsquo;t have a proper idea what is the best solution. A very simple approach is to provide a some audio+transcripts.</p>
+<p>Later on, I can still replace them by something more dynamic.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day4">Day 4: Simple correction</div>
 <p>I managed to complete the simplest MVP:</p>
 <ul>
