--- a/index.html
+++ b/index.html
@@ -220,11 +220,12 @@
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide">
 Progress: 
-🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 5/25 days
+🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 6/25 days
 </div>
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day6">Day 6: Issue transcripts</a> </li>
   <li> <a href="#day5">Day 5: Issue transcripts</a> </li>
   <li> <a href="#day4">Day 4: Simple correction</a> </li>
   <li> <a href="#day3">Day 3: Add video player</a> </li>
@@ -243,6 +244,20 @@ Progress:
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day6">Day 6: Easy solution for Transcripts</div>
+<p>My initial idea was to create an app as follows:</p>
+<img src="/images/day5.png" alt="Initial idea" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
+<p>After trying to figure the best way to integrate the YouTube-API (I wasted already ½-hour to figure out why the API-credentials were wrong.),
+I decided to give up for now (not because it&rsquo;s hard, just because it&rsquo;s too much effort for an MVP) and go further with a predefined set of dictations.</p>
+<p>For english dictations, I will stick to these <a href="http://www.rainsnow.org/cshf_public_domain_stories.htm">freely available short stories</a>, and use
+the videos from YouTube. Later on, I have to find other resources for different languages (maybe ask
+on <a href="https://www.reddit.com/r/languagelearning/">r/languagelearning</a> ?).</p>
+<p>For tomorrow these are the plans:</p>
+<ul>
+<li>replace the YouTube link with an audio for one of the short stories</li>
+<li>hard-code the text form the short stories</li>
+<li>design the proper landing page, as well as define some goals.</li>
+</ul>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day5">Day 5: Issue transcripts</div>
 <p>Started with updating the todos on <a href="https://flashdictation.com/#roadmap">FlashDictation.com</a>. Apart from that, added a
 shortcut for the video-player (Key 1) for starting and stopping. That makes it easier to type what I hear without having to move my
