--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Progress:
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
-  <li> <a href="#day6">Day 6: Issue transcripts</a> </li>
+  <li> <a href="#day6">Day 6: Easy solution for Transcripts</a> </li>
   <li> <a href="#day5">Day 5: Issue transcripts</a> </li>
   <li> <a href="#day4">Day 4: Simple correction</a> </li>
   <li> <a href="#day3">Day 3: Add video player</a> </li>
