--- a/index.html
+++ b/index.html
@@ -253,7 +253,10 @@ work for anyone - but solved my problem. I could even extend it, such that I can
 transcripts and create a &ldquo;dictation&rdquo; page for that video. That way, the user can share that link. Once you land on the
 page, you can see the video and an input area to type what you hear. Once done, let me correct your mistakes - as for
 now.</p>
-<p>So how to monetize? One way is to charge to create the &ldquo;dictation&rdquo; page and target teachers. As a teacher, you can create a dictation page and send it to your students. They can listen to the audio once - and type what they hear, and send it back to you. You can use the &ldquo;auto-correction&rdquo; tool to see what mistakes they made, and send it back to them - so they can correct them.</p>
+<p>So how to monetize? One way is to charge to create the &ldquo;dictation&rdquo; page and target teachers. As a teacher,
+you can create a dictation page and send it to your students. They can listen to the audio once - and type what they hear,
+and send it back to you. You can use the &ldquo;auto-correction&rdquo; tool to see what mistakes they made, and send it back to them - so they can correct them.
+You have to pay certain amount (let&rsquo;s say $3.77/month) to create an account.</p>
 <p>For the above use case, I need to change Flashdictation as follows:</p>
 <ul>
 <li>Allow creating a dictation page (video/audio + transcript)</li>
