--- a/index.html
+++ b/index.html
@@ -220,11 +220,12 @@
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide">
 Progress: 
-🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 7/25 days
+🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 8/25 days
 </div>
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day8">Day 8: Lading Page</a> </li>
   <li> <a href="#day7">Day 7: First week done, goal for next week</a> </li>
   <li> <a href="#day6">Day 6: Easy solution for transcripts</a> </li>
   <li> <a href="#day5">Day 5: Issue transcripts</a> </li>
@@ -245,6 +246,15 @@ Progress:
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day8">Day 8: Landing Page</div>
+<p>Today I worked on redesigning the landing page.  This is how it looks like now:</p>
+<img src="/images/day8-page-before.png" alt="Page before" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
+<p>This is how it looks like now. It is not done yet, but almost:</p>
+<img src="/images/day8-page-now.png" alt="Page now" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
+<p>I need to add some info graphics and explanation what is going on. The page should be optimized for mobile as well.
+Today I only focused on the desktop version. Tomorrow, I will fix the audio-player (it should auto-play and show that it&rsquo;s muted), and test it on mobile.</p>
+<p>The written text should also be synchronized with the audio. I need to add a &ldquo;correct me&rdquo; button. Once that is done, I can write down the final features.</p>
+<p>I am pretty happy with todays progress. 💪</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day7">Day 7: First week done, goal for next week</div>
 <p>Today marks one week I have been working every day for at least 1 hour. At the beginning, I made huge progress, got the PoC implemented very fast, and deployed it to flashdictation.com. Now I have something working, but I need some goals for the next two weeks.</p>
 <p>This project is called AdventOfSaaS - so where is the SaaS part? That is something I have been thinking about the last
