--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@ Progress:
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
-  <li> <a href="#day8">Day 8: Lading Page</a> </li>
+  <li> <a href="#day9">Day 9: Landing Page for Mobile</a> </li>
+  <li> <a href="#day8">Day 8: Landing Page</a> </li>
   <li> <a href="#day7">Day 7: First week done, goal for next week</a> </li>
   <li> <a href="#day6">Day 6: Easy solution for transcripts</a> </li>
   <li> <a href="#day5">Day 5: Issue transcripts</a> </li>
@@ -246,6 +247,14 @@ Progress:
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day9">Day 9: Landing Page for Mobile</div>
+<p>Continued on the landing page. Replaced the blue buttons by actual text and a logo, so it&rsquo;s more clear what each it stands for.
+I need to add more text to describe further in details.</p>
+<p>I don&rsquo;t like if you end up on a landing page, and you don&rsquo;t understand what the project is about.
+Nowadays, the focus is on fancy design and less text. But I don&rsquo;t see why we can&rsquo;t have both.</p>
+<p>Anyways, this is the result after todays work.</p>
+<img src="/images/day9-mobile.png" alt="Mobile" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
+<p>I also added Plausible.io to track how mayn people are using the page.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day8">Day 8: Landing Page</div>
 <p>Today I worked on redesigning the landing page.  This is how it looks like now:</p>
 <img src="/images/day8-page-before.png" alt="Page before" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
