--- a/til/2019-12-04-pid/index.html
+++ b/til/2019-12-04-pid/index.html
@@ -220,16 +220,16 @@ $ tail --pid=$pid -f /dev/null Learned from to StackOverflow answer." />
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
+            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Simulate network control</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2021-05-25-tagged_templates/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Tagged Templates in JavaScript</span>
+            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
             </a>
         </div>
     </div>
