--- a/index.html
+++ b/index.html
@@ -248,13 +248,14 @@ Progress:
 </ul>
 </div>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day9">Day 9: Landing Page for Mobile</div>
-<p>Continued on the landing page. Replaced the blue buttons by actual text and a logo, so it&rsquo;s more clear what each it stands for.
-I need to add more text to describe further in details.</p>
-<p>I don&rsquo;t like if you end up on a landing page, and you don&rsquo;t understand what the project is about.
+<p>Continued on the landing page. Replaced the blue buttons by actual text and a logo, so it&rsquo;s more clear what each part stands for.</p>
+<p>I need to add more text to describe further in details, what every part is.<br>
+I don&rsquo;t like if you end up on a landing page, and you don&rsquo;t understand what the project is about.
 Nowadays, the focus is on fancy design and less text. But I don&rsquo;t see why we can&rsquo;t have both.</p>
 <p>Anyways, this is the result after todays work.</p>
 <img src="/images/day9-mobile.png" alt="Mobile" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
-<p>I also added Plausible.io to track how mayn people are using the page.</p>
+<p>I also added Plausible.io to track how mayn people are using the page. Let&rsquo;s see tomorrow how many people visited the page.</p>
+<p>Note to myself: Add Plausible.io form the beginning next time!</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day8">Day 8: Landing Page</div>
 <p>Today I worked on redesigning the landing page.  This is how it looks like now:</p>
 <img src="/images/day8-page-before.png" alt="Page before" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
