--- a/index.html
+++ b/index.html
@@ -220,11 +220,15 @@
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide">
 Progress: 
-🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 8/25 days
+<span id="progressbar">
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜10 / 25 days
+</span>
+
 </div>
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day9">Day 10: Navigation</a> </li>
   <li> <a href="#day9">Day 9: Landing Page for Mobile</a> </li>
   <li> <a href="#day8">Day 8: Landing Page</a> </li>
   <li> <a href="#day7">Day 7: First week done, goal for next week</a> </li>
@@ -247,6 +251,12 @@ Progress:
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day9">Day 10: Navigation</div>
+<p>Added navigation to the page, visually this does not change much:
+<img src="/images/day10.png" alt="Navigation" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg"></p>
+<p>Behind the scene, I had to re-organize the code. The current online version is broken,
+since I host the page via Cloudflare (they only support static next.js builds).</p>
+<p>Next, (haha) I have to move away from Cloudflare. Maybe try Vercel or build on a VPS?</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day9">Day 9: Landing Page for Mobile</div>
 <p>Continued on the landing page. Replaced the blue buttons by actual text and a logo, so it&rsquo;s more clear what each part stands for.</p>
 <p>I need to add more text to describe further in details, what every part is.<br>
