--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ That might change, so I move rather now than later.</p>
 <p>There are not many visible changes today, but I reorganized the code, and started adding the login components.
 It takes more than a few hours to finish that, so I decide not to deploy the half-broken parts. I will complete it tomorrow and push a version.</p>
 <p>A few days ago, I wrote a mail to <a href="https://innerfrench.com/">innerfrench</a> ( A french podcast, targeted at beginners. ), and got a reply:</p>
-<img src="/images/day11.png" alt="Mail reply" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
+<img src="/images/day11-mail.png" alt="Mail reply" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg">
 <p>This is great news! Next, I need to find some good English examples!</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day10">Day 10: Navigation</div>
 <p>Added navigation to the page, visually this does not change much:
