--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ That approach needs a hosted database instance (to store dictations + text). In 
 <li>Possibility of migrating to a self-hosted version if needed</li>
 </ul>
 <p>I found <a href="https://github.com/vercel/nextjs-subscription-payments">this</a> nice project from Vercel, with Stripe and Supabase integration.
-Took it as template and adapted it for my use case. This is the current result:</p>
+Took it as a template and adapted it for my use case. This is the current result:</p>
 <img src="/images/day12-login.png" alt="Login" class="lg:w-3/4 shadow-xl mx-auto py-4 border-default border-blue-800 rounded-lg">
 <img src="/images/day12-login-user.png" alt="Login" class="lg:w-3/4 shadow-xl mx-auto py-4 border-default border-blue-800 rounded-lg">
 <p>The UI looks ugly - since I had to adapt some css, and did not spend much time to make it prettier. What counts is, that I can login and create an account.
