--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Progress:
   <li> <a href="#day4">Day 4: Simple correction</a> </li>
   <li> <a href="#day3">Day 3: Add video player</a> </li>
   <li> <a href="#day2">Day 2: Define MVP</a> </li>
-  <li> <a href="#01.12.2021">Day 1: Setup</a> </li>
+  <li> <a href="#day1">Day 1: Setup</a> </li>
   <li>
     <a href="day0">Day 0: Launch AdventOfSaas 2021</a>
     <ul>
@@ -402,7 +402,7 @@ especially since they come with proper subtitles, and the transcripts are free.<
 <p>Apart from that, I want to focus on attracting more traffic to <a href="http://flashdictation.com">
 flashdictation.com</a> and to this site, so I published this project to IndieHackers.com:
 <a href="https://www.indiehackers.com/post/adventofsaas-2021-flashdictation-3ba2cf528b">AdventOfSaaS 2021: flashdictation</a></p>
-<div class="bg-orange-200 p-1 font-semibold mt-8" id="01.12.2021">Day 1: Setup</div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day1">Day 1: Setup</div>
 <p><em>What I planned to do and what I did</em></p>
 <pre style="background-color: white; font-size: 1.1rem; padding: 1px" >
  ■ Publish this page on kiru.io 
