--- a/til/2017-03-07-binding/index.html
+++ b/til/2017-03-07-binding/index.html
@@ -25,9 +25,9 @@
   Source: [0.0.0.0 vs 127." />
 <meta property="og:type" content="article" />
 
-
 <link rel="stylesheet" href="/css/kiru.css">
 <link rel="shortcut icon" href="/images/favicon.ico">
+<script defer data-domain="kiru.io" src="https://plausible.io/js/plausible.js"></script>
 
 <style>
     .markdown {
@@ -246,16 +246,16 @@ Source: [0.0.0.0 vs 127.0.0.1](http://blog.lauramamina.com/article?title=0.0.0.0
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
+            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Various</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2018-10-22-bash/" class="hover:underline">
-                <span class="text-blue-700 font-bold">.bash_profile vs .bashrc</span>
+            <a href="https://kiru.io/til/2019-10-22-fswatch/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Execute python file on change fswatch</span>
             </a>
         </div>
     </div>
