--- a/til/2017-03-13-java-and-oracle/index.html
+++ b/til/2017-03-13-java-and-oracle/index.html
@@ -22,9 +22,9 @@ public enum MyEnum { YES, NO; public static void main(String[] args) { MyEnum e 
 select extract(year from created_timestamp), extract(month from created_timestamp), extract(day from created_timestamp) from student; Source: [EXTRACT](https://docs." />
 <meta property="og:type" content="article" />
 
-
 <link rel="stylesheet" href="/css/kiru.css">
 <link rel="shortcut icon" href="/images/favicon.ico">
+<script defer data-domain="kiru.io" src="https://plausible.io/js/plausible.js"></script>
 
 <style>
     .markdown {
@@ -241,16 +241,16 @@ Source: [EXTRACT](https://docs.oracle.com/cd/B19306_01/server.102/b14200/functio
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
+            <a href="https://kiru.io/til/2019-12-07-new-javascript-features/" class="hover:underline">
+                <span class="text-blue-700 font-bold">JavaScript Function string</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Simulate network control</span>
+            <a href="https://kiru.io/til/2017-03-28-sqllite/" class="hover:underline">
+                <span class="text-blue-700 font-bold">SQLite Type Affinity</span>
             </a>
         </div>
     </div>
