--- a/til/2019-12-07-new-javascript-features/index.html
+++ b/til/2019-12-07-new-javascript-features/index.html
@@ -22,9 +22,9 @@ let f = () =&gt; { alert(&#34;kiru.io&#34;) } f.toString() Will emit
 &quot;() =&gt; { alert(\&quot;kiru.io\&quot;) }&quot; Learned from this resource." />
 <meta property="og:type" content="article" />
 
-
 <link rel="stylesheet" href="/css/kiru.css">
 <link rel="shortcut icon" href="/images/favicon.ico">
+<script defer data-domain="kiru.io" src="https://plausible.io/js/plausible.js"></script>
 
 <style>
     .markdown {
@@ -225,8 +225,8 @@ alert(\&quot;kiru.io\&quot;)
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-14-du/" class="hover:underline">
-                <span class="text-blue-700 font-bold">What is the difference between `du` and `df` command?</span>
+            <a href="https://kiru.io/til/" class="hover:underline">
+                <span class="text-blue-700 font-bold"></span>
             </a>
         </div>
     </div>
@@ -241,8 +241,8 @@ alert(\&quot;kiru.io\&quot;)
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-05-sms-length/" class="hover:underline">
-                <span class="text-blue-700 font-bold">What is the max length of an SMS?</span>
+            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
             </a>
         </div>
     </div>
