--- a/til/2020-06-28-multiselect/index.html
+++ b/til/2020-06-28-multiselect/index.html
@@ -23,9 +23,9 @@ A hack to fix this is to add a hidden property with the same name.
 &lt;input type=&quot;hidden&quot; name=&quot;myitems&quot; value=&quot;&quot; /&gt; " />
 <meta property="og:type" content="article" />
 
-
 <link rel="stylesheet" href="/css/kiru.css">
 <link rel="shortcut icon" href="/images/favicon.ico">
+<script defer data-domain="kiru.io" src="https://plausible.io/js/plausible.js"></script>
 
 <style>
     .markdown {
@@ -227,16 +227,16 @@ A hack to fix this is to add a hidden property with the same name.
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-05-sms-length/" class="hover:underline">
-                <span class="text-blue-700 font-bold">What is the max length of an SMS?</span>
+            <a href="https://kiru.io/til/2019-12-06-java-comment-code/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Java code comments</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-06-java-comment-code/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Java code comments</span>
+            <a href="https://kiru.io/til/2021-05-25-tagged_templates/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Tagged Templates in JavaScript</span>
             </a>
         </div>
     </div>
