--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day16">Day 16: Makeup Part 2</a> </li>
   <li> <a href="#day15">Day 15: Makeup Part 1</a> </li>
   <li> <a href="#day14">Day 14: Share dictations</a> </li>
   <li> <a href="#day13">Day 13: Add dictations</a> </li>
@@ -282,6 +283,15 @@
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day16">Day 16: Makeup Part 2</div>
+<p>As planned, finished the redesign for the login and dictation pages:</p>
+<div class="flex flex-col md:flex-row md:gap-3 py-3">
+  <img src="/images/day16-edit.png" alt="edit page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+  <img src="/images/day16-login.png" alt="login page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+  <img src="/images/day16-score.png" alt="score" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+</div>
+<p>I did not manage to fix the production environment,
+since there are still some database changes missing. Hopefully should be done by tomorrow.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day15">Day 15: Makeup Part 1</div>
 <p>Before I changed all pages to be consistent, I re-evaluated the todos, and reorganized them:</p>
 <img src="/images/day15-roadmap.png" alt="Roadmap" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
