--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
 </div>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day17">Day 17: Production</div>
 <p>No UI changes today. I tried to fix the production environment, but there were too many issues. The main problem is, that
-I have to setup a different Supabase project and copy all data. Unfortunately, that is not easy. So I decided to re-do all database
-and recreate the data. Most of them being Stripe-products. Then I spent some time to fix stripe production.</p>
-<p>Obviously this did not work as flawlessly. Finally, I gave up and thought I can at least fix Vercel to have the landing page fixed.
-After ignoring bunch of TypeScript errors, I have a new version online:</p>
+I have to setup a different Supabase project and copy all data. Unfortunately, that is not easy. So I decided to re-do the database
+and recreate the data. Most of them being Stripe-products. Then I spent some time fixing stripe production.</p>
+<p>Obviously, this did not work as flawlessly. Finally, I gave up and thought I can at least fix Vercel to have the landing page fixed.
+After ignoring a bunch of TypeScript errors, I have a new version online:</p>
 <img src="/images/day17-landing.png" alt="edit page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day16">Day 16: Makeup Part 2</div>
 <p>As planned, finished the redesign for the login and dictation pages:</p>
